300ms 제거. 버튼이 active 상태로 남는 것을 고쳐라

--- a/styles.scss
+++ b/styles.scss
@@ -7,4 +7,9 @@ $secondary: #333333;
 $background: $primary;
 $navbar-height: 0;
 
+.disable-double-tap {
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
+
 @import "./node_modules/bulma/bulma.sass";
