--- a/src/prototype.css
+++ b/src/prototype.css
@@ -170,6 +170,15 @@ button {
   }
 }
 
+/* Content Wrapper */
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow: hidden;
+  position: relative;
+}
+
 /* Main Content */
 .main-content {
   flex: 1;
@@ -620,6 +629,7 @@ button {
 
   .content-wrapper {
     display: flex;
+    flex-direction: row;
     flex: 1;
     overflow: hidden;
   }
